// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRadioGroup should not check any radio elements by default 1`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r0:"
          name="example"
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r1:"
          name="example"
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r2:"
          name="example"
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r3:"
          name="example"
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup should not check any radio elements by default 2`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r0:"
          name="example"
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        >
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r1:"
          name="example"
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r2:"
          name="example"
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r3:"
          name="example"
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup should not check any radio elements by default 3`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r0:"
          name="example"
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        >
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r1:"
          name="example"
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r2:"
          name="example"
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r3:"
          name="example"
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup should not check any radio elements by default 4`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r0:"
          name="example"
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        >
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r1:"
          name="example"
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r2:"
          name="example"
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        >
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r3:"
          name="example"
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup should support creating a required radio group 1`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r4:"
          name="example"
          required=""
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r5:"
          name="example"
          required=""
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r6:"
          name="example"
          required=""
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r7:"
          name="example"
          required=""
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <button
      class="rmd-button rmd-button--text"
      type="submit"
    >
      <span>
        Submit
      </span>
      <span
        class="rmd-ripple-container"
      >
        <span
          class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
          style="left: 0px; top: 0px; height: 0px; width: 0px;"
        />
      </span>
    </button>
  </form>
</div>
`;

exports[`useRadioGroup should support creating a required radio group 2`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r4:"
          name="example"
          required=""
          type="radio"
          value="a"
        />
        <span
          class="rmd-ripple-container"
        >
          <span
            class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
            style="left: 0px; top: 0px; height: 0px; width: 0px;"
          />
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r5:"
          name="example"
          required=""
          type="radio"
          value="b"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r6:"
          name="example"
          required=""
          type="radio"
          value="c"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
        <input
          class="rmd-hidden-input"
          id="radio-:r7:"
          name="example"
          required=""
          type="radio"
          value="d"
        />
        <span
          class="rmd-ripple-container"
        />
      </span>
    </label>
    <button
      class="rmd-button rmd-button--text"
      type="submit"
    >
      <span>
        Submit
      </span>
      <span
        class="rmd-ripple-container"
      >
        <span
          class="rmd-ripple rmd-ripple--animating rmd-ripple--scaling"
          style="left: 0px; top: 0px; height: 0px; width: 0px;"
        />
      </span>
    </button>
  </form>
</div>
`;

exports[`useRadioGroup should support rendering within a menu 1`] = `
<div
  aria-labelledby="menubutton-:rg:"
  class="rmd-menu rmd-menu--elevated rmd-scale-transition--enter rmd-scale-transition--y-enter rmd-scale-transition--enter-active rmd-scale-transition--y-enter-active"
  id="menu-:ri:"
  role="menu"
  style="position: fixed; transform-origin: 0 0; left: 16px; top: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--medium rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-:rj:"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        First
      </span>
      <span
        class="rmd-ripple-container"
      />
    </li>
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--medium rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-:rk:"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Second
      </span>
      <span
        class="rmd-ripple-container"
      />
    </li>
    <li
      aria-checked="true"
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--medium rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-:rl:"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--active rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Third
      </span>
      <span
        class="rmd-ripple-container"
      />
    </li>
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--clickable rmd-list-item--medium rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-:rm:"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Forth
      </span>
      <span
        class="rmd-ripple-container"
      />
    </li>
  </ul>
</div>
`;
